2024-03-05 [3.14]
* nahradenie interného klienta prehraj.to za priame volanie nového prehraj.to doplnku

2024-01-27 [3.13]
* priadnie podpory pre virtuálne profily v ArchivCZSK >= 2.5.0

2024-01-08 [3.12]
* úpravy kvôli zmene spôsobu fungovania rodičovskej kontroly
* automatické nastavovanie timeoutu a možnosť zapnúť/vypnúť verifikáciu SSL certifikátov

2024-01-03 [3.11]
* vypnutie otvorenia SSL certifikátov

2023-12-31 [3.10]
* zmena predvoleného protokolu pre komunikáciu s API na https

2023-12-30 [3.9]
* aplikovanie zmeny timeoutu protokolu pre komunikáciu s API bez reštartu

2023-12-01 [3.8]
* pridanie žánrov do popisu filmu

2023-10-27 [3.7]
* oprava vyhľadania na prehraj.to

2023-07-07 [3.6]
* pridanie podpory pre súbory chránené heslom

2023-05-04 [3.5]
* vylepšenie filtrovania obsahu pre dospelých

2023-04-17 [3.4]
* nastavovanie lepšieho názvu súboru pri sťahovaní epizód u seriálov
* oprava označovania pozretých sezón/epizód u seriálov

2023-04-12 [3.3]
* nastavovanie správneho user agenta do požiadaviek

2023-04-12 [3.2]
* pridanie vyhľadávania Prehraj.to do seekera
* vylepšené vypĺňanie informácii o sérii a epizóde

2023-04-03 [3.1]
* oprava scrobble pre trakt.tv
* pridanie automatického spustenia titulkov a zmenu audio streamu
* oprava triedenia v a-z priečinkoch

2023-04-03 [3.0]
* kompletný prepis doplnku postavený nad tools_archivczsk
* úprava rozhrania po vzore oficiálneho kodi doplnku
* pridanie histórie sledovania podľa jednotlivých kategórii a integrácia s trakt.tv
* pridanie možnosti vyhľadania filmu na prehraj.to
* mnoho rôznych vylepšení

2023-03-06 [2.3.3]
* oprava nastavovania timeoutu pre požiadavky
* pridanie chybových výpisov pri zlyhaní požiadavky

2023-03-06 [2.3.2]
* oprava autorizácie

2023-02-23 [2.3.1]
* oprava pádu pri konverzii názvu pre python3
* oprava stránkovania

2023-01-28 [2.3.0]
* konverzia na modul pre archivCZSK >= 2.0.0

2023-01-21 [2.2.5]
* zmena protokolu pre pripojenie k SCC z https na http

2023-01-20 [2.2.4]