@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.sc2" name="Stream Cinema Community" version="3.14">
+<addon id="plugin.video.sc2" name="Stream Cinema Community" version="3.15">
 	<requires>
 		<import addon="enigma2.archivczsk" version="2.5.0"/>
 		<import addon="tools.archivczsk" version="1.21" />
